# akonadi-phabricator-resource

./: .gitignore  CMakeLists.txt  akonadi_maniphest_resource.desktop  akonadi_phabricator_resource.desktop
autotests/: CMakeLists.txt  markupparsertest.cpp
src/: CMakeLists.txt  configdialog.cpp  configdialog.h  configdialog.ui  maniphestresource.cpp  maniphestresource.h  resource.cpp  resource.h  settings.cpp  settings.h  settingsbase.kcfg  settingsbase.kcfgc
src/liphrary/: CMakeLists.txt  maniphest.cpp  maniphest.h  markup.cpp  markup.h  project.cpp  project.h  server.cpp  server.h  user.cpp  user.h  utils_p.h
